fixes #1258 singup button overflowing in mobile devices when user singup as a guest

--- a/src/components/Guest/GuestSignUpBtn/index.css
+++ b/src/components/Guest/GuestSignUpBtn/index.css
@@ -11,10 +11,10 @@
   border-radius: 1rem;
   cursor: pointer;
   font-weight: 600;
-  background: none;
+  background: #5f85db;
   border: 2px solid #5f85db;
   transition: 0.3s ease-in-out;
-  color: #5f85db;
+  color: #ffffff;
 }
 
 .guest-sign-up-button:hover {
